# QtPSD

./: CMakeLists.txt  README.rst  qtpackage.toml
src/: qtpsd.cpp  qtpsd.h  qtpsd_global.h
src/private/: psd.h
test/: qtpsd_test.cpp  test.psd
